# learning-rust

./: Cargo.toml  README.md
data/: Cargo.toml
data/src/: lib.rs
data/src/common/: helpers.rs
data/src/models/: customer_model.rs  github_model.rs  mod.rs
data/src/repositories/: customer_repository.rs  mod.rs
src/: main.rs
