[package]
name = "models"
version = "0.1.0"
edition = "2021"

[lib]
name = "data"
path = "src/lib.rs"

[dependencies]

[dependencies.aws-config]
git = "https://github.com/awslabs/aws-sdk-rust"
branch = "main"

[dependencies.aws-sdk-dynamodb]
git = "https://github.com/awslabs/aws-sdk-rust"
branch = "main"

[dependencies.aws-http]
git = "https://github.com/awslabs/aws-sdk-rust"
branch = "main"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.structopt]
version = "0.3"
default-features = false

[dependencies.validator]
version = "0.16.0"
features = ["derive"]